v1.0.0/modules/schema/pages/class/TailbayLossCurve.adoc
= `TailbayLossCurve`
:toclevels: 4


+++Relationship between tailbay head loss height (Y-axis) and the total discharge into the power station's tailbay volume per time unit (X-axis) . There could be more than one curve depending on the level of the tailbay reservoir or river level.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:TailbayLossCurve`


| CIM standard (perspective)
| IEC61970 (Grid)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** xref::class/Curve.adoc[`Curve`]
*** *`TailbayLossCurve`*


== Slots



.Associated classes
[d2,svg,theme=4]
----
vars: {
  d2-config: {
    pad: 20
  }
}
TailbayLossCurve {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



HydroGeneratingUnit {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



CurveData {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



DiagramObject {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



InstanceSet {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



Name {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}




TailbayLossCurve -> HydroGeneratingUnit: HydroGeneratingUnit


TailbayLossCurve -> CurveData: CurveDatas


TailbayLossCurve -> DiagramObject: DiagramObjects


TailbayLossCurve -> InstanceSet: InstanceSet


TailbayLossCurve -> Name: Names


TailbayLossCurve -> ChangeSetMember: PropertiesCIMDataObject


TailbayLossCurve -> ChangeSetMember: TargetingCIMDataObject


legend: "" {
  style: {
    fill: transparent
    stroke: transparent
  }
  grid-rows: 3
  grid-columns: 2
  grid-gap: 10
  near: bottom-right
  iec61968_color: "" {
    style: {
      fill: "#d1e7c2"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61968_text: "IEC61968 (Enterprise)" {
    shape: text
  }
  iec61970_color: "" {
    style: {
      fill: "#eccfcb"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61970_text: "IEC61970 (Grid)" {
    shape: text
  }
  iec62325_color: "" {
    style: {
      fill: "#fffbef"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec62325_text: "IEC62325 (Market)" {
    shape: text
  }
}
----


[cols="3,1,3,6",width=100%]
|===
| Name | Cardinality | Type | Description

| <<HydroGeneratingUnit,`HydroGeneratingUnit`>>
| 1
| xref::class/HydroGeneratingUnit.adoc[`HydroGeneratingUnit`]
| +++A hydro generating unit has a tailbay loss curve.+++

| <<InstanceSet,`InstanceSet`>>
| 1
| xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++

| <<aliasName,`aliasName`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

| <<curveStyle,`curveStyle`>>
| 0..1
| xref::enumeration/CurveStyle.adoc[`CurveStyle`]
| +++The style or shape of the curve.+++

| <<description,`description`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

| <<mRID,`mRID`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

| <<name,`name`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++

| <<xMultiplier,`xMultiplier`>>
| 0..1
| xref::enumeration/UnitMultiplier.adoc[`UnitMultiplier`]
| +++Multiplier for X-axis.+++

| <<xUnit,`xUnit`>>
| 0..1
| xref::enumeration/UnitSymbol.adoc[`UnitSymbol`]
| +++The X-axis units of measure.+++

| <<y1Multiplier,`y1Multiplier`>>
| 0..1
| xref::enumeration/UnitMultiplier.adoc[`UnitMultiplier`]
| +++Multiplier for Y1-axis.+++

| <<y1Unit,`y1Unit`>>
| 0..1
| xref::enumeration/UnitSymbol.adoc[`UnitSymbol`]
| +++The Y1-axis units of measure.+++

| <<y2Multiplier,`y2Multiplier`>>
| 0..1
| xref::enumeration/UnitMultiplier.adoc[`UnitMultiplier`]
| +++Multiplier for Y2-axis.+++

| <<y2Unit,`y2Unit`>>
| 0..1
| xref::enumeration/UnitSymbol.adoc[`UnitSymbol`]
| +++The Y2-axis units of measure.+++

| <<y3Multiplier,`y3Multiplier`>>
| 0..1
| xref::enumeration/UnitMultiplier.adoc[`UnitMultiplier`]
| +++Multiplier for Y3-axis.+++

| <<y3Unit,`y3Unit`>>
| 0..1
| xref::enumeration/UnitSymbol.adoc[`UnitSymbol`]
| +++The Y3-axis units of measure.+++

| <<CurveDatas,`CurveDatas`>>
| 0..*
| xref::class/CurveData.adoc[`CurveData`]
| +++The point data values that define this curve.+++

| <<DiagramObjects,`DiagramObjects`>>
| 0..*
| xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++

| <<Names,`Names`>>
| 0..*
| xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..*
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#CurveDatas]
=== `CurveDatas`
+++The point data values that define this curve.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Curve.CurveDatas`
| Cardinality
| 0..*
| Type
| xref::class/CurveData.adoc[`CurveData`]

| Inherited from
| xref::class/Curve.adoc[`Curve`]


|===

//[discrete]
[#curveStyle]
=== `curveStyle`
+++The style or shape of the curve.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Curve.curveStyle`
| Cardinality
| 0..1
| Type
| xref::enumeration/CurveStyle.adoc[`CurveStyle`]

| Inherited from
| xref::class/Curve.adoc[`Curve`]


|===

//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#HydroGeneratingUnit]
=== `HydroGeneratingUnit`
+++A hydro generating unit has a tailbay loss curve.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:TailbayLossCurve.HydroGeneratingUnit`
| Cardinality
| 1
| Type
| xref::class/HydroGeneratingUnit.adoc[`HydroGeneratingUnit`]


|===

//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#xMultiplier]
=== `xMultiplier`
+++Multiplier for X-axis.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Curve.xMultiplier`
| Cardinality
| 0..1
| Type
| xref::enumeration/UnitMultiplier.adoc[`UnitMultiplier`]

| Inherited from
| xref::class/Curve.adoc[`Curve`]


|===

//[discrete]
[#xUnit]
=== `xUnit`
+++The X-axis units of measure.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Curve.xUnit`
| Cardinality
| 0..1
| Type
| xref::enumeration/UnitSymbol.adoc[`UnitSymbol`]

| Inherited from
| xref::class/Curve.adoc[`Curve`]


|===

//[discrete]
[#y1Multiplier]
=== `y1Multiplier`
+++Multiplier for Y1-axis.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Curve.y1Multiplier`
| Cardinality
| 0..1
| Type
| xref::enumeration/UnitMultiplier.adoc[`UnitMultiplier`]

| Inherited from
| xref::class/Curve.adoc[`Curve`]


|===

//[discrete]
[#y1Unit]
=== `y1Unit`
+++The Y1-axis units of measure.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Curve.y1Unit`
| Cardinality
| 0..1
| Type
| xref::enumeration/UnitSymbol.adoc[`UnitSymbol`]

| Inherited from
| xref::class/Curve.adoc[`Curve`]


|===

//[discrete]
[#y2Multiplier]
=== `y2Multiplier`
+++Multiplier for Y2-axis.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Curve.y2Multiplier`
| Cardinality
| 0..1
| Type
| xref::enumeration/UnitMultiplier.adoc[`UnitMultiplier`]

| Inherited from
| xref::class/Curve.adoc[`Curve`]


|===

//[discrete]
[#y2Unit]
=== `y2Unit`
+++The Y2-axis units of measure.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Curve.y2Unit`
| Cardinality
| 0..1
| Type
| xref::enumeration/UnitSymbol.adoc[`UnitSymbol`]

| Inherited from
| xref::class/Curve.adoc[`Curve`]


|===

//[discrete]
[#y3Multiplier]
=== `y3Multiplier`
+++Multiplier for Y3-axis.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Curve.y3Multiplier`
| Cardinality
| 0..1
| Type
| xref::enumeration/UnitMultiplier.adoc[`UnitMultiplier`]

| Inherited from
| xref::class/Curve.adoc[`Curve`]


|===

//[discrete]
[#y3Unit]
=== `y3Unit`
+++The Y3-axis units of measure.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Curve.y3Unit`
| Cardinality
| 0..1
| Type
| xref::enumeration/UnitSymbol.adoc[`UnitSymbol`]

| Inherited from
| xref::class/Curve.adoc[`Curve`]


|===


